@@ -70,6 +70,7 @@ enum {
 	ID_PROPERTIESPANEL_TREE,
 	ID_SOURCEPANEL,
 	ID_SOURCEPANEL_RTC,
+	ID_SOURCETEXTCTRL_EXAMINE_VALUE,
 	ID_SOURCETEXTCTRL_RUN_TO_HERE,
 	ID_SOURCETEXTCTRL_TOGGLE_BREAKPOINT,
 	ID_STACKPANEL_LIST,
